[gd_scene load_steps=3 format=3 uid="uid://ddwvrhec0a60o"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_5smud"]
[ext_resource type="Theme" uid="uid://bnehbdwc2p6ne" path="res://Assets/ui/main_theme.tres" id="2_8jt8f"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_5smud")

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 537.0
offset_top = 372.0
offset_right = 581.0
offset_bottom = 403.0
scale = Vector2(2, 2)
theme = ExtResource("2_8jt8f")
text = "Join"

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 335.0
offset_top = 374.0
offset_right = 379.0
offset_bottom = 405.0
scale = Vector2(2, 2)
theme = ExtResource("2_8jt8f")
text = "Host"

[node name="PlayerName" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 393.0
offset_top = 24.0
offset_right = 559.453
offset_bottom = 69.005
scale = Vector2(2, 2)
text = "Jose"

[node name="ServerAddress" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 394.0
offset_top = 132.0
offset_right = 560.453
offset_bottom = 177.005
scale = Vector2(2, 2)
text = "BestServer.org"

[node name="ServerPort" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 392.0
offset_top = 240.0
offset_right = 558.453
offset_bottom = 285.005
scale = Vector2(2, 2)
text = "12345"

[node name="EnterPlayerName" type="Label" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 58.0
offset_right = 362.0
offset_bottom = 81.0
text = "Enter player name (max 9 chars): "

[node name="EnterServerAddress" type="Label" parent="."]
layout_mode = 0
offset_left = 199.0
offset_top = 165.0
offset_right = 363.0
offset_bottom = 188.0
text = "Enter server address:"

[node name="EnterServerPort" type="Label" parent="."]
layout_mode = 0
offset_left = 215.0
offset_top = 281.0
offset_right = 379.0
offset_bottom = 304.0
text = "Enter server port:"
